k8s/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
  labels:
    app: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      name: spring
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: springboot3k8s:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
