k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot3k8s
                port:
                  number: 8080
          - path: /kubeview
            pathType: Prefix
            backend:
              service:
                name: kubeview
                port:
                  number: 80
